Add color white to number stepper

--- a/src/assets/styles/sass/_step.scss
+++ b/src/assets/styles/sass/_step.scss
@@ -17,5 +17,6 @@
 
 .p-steps .p-steps-item.p-highlight .p-steps-number {
     background: var(--primary-color) !important;
+    color: #ffffff;
     border: 1px solid #ffffff !important;
 }
