--- a/src/assets/styles/sass/_dialog.scss
+++ b/src/assets/styles/sass/_dialog.scss
@@ -1,18 +1,23 @@
 .p-dialog .p-dialog-header {
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+.p-dialog .p-dialog-header {
+  background-color: #f9f9f9;
 }
 
 .p-dialog .p-dialog-footer {
-
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+  background-color: #f9f9f9;
 }
-.p-dialog-header-close-icon{
-    font-size: 2rem;
-    color: #000;
+.p-dialog .p-dialog-footer {
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+.p-dialog-header-close-icon {
+  font-size: 2rem;
+  color: #000;
 }
 
-.p-dialog .p-dialog-footer{
-    text-align: center;
+.p-dialog .p-dialog-footer {
+  text-align: center;
 }
