--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,7 @@ h2 {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --surface-overlay: #f9f9f9;
+  --surface-overlay: #F9F9F9;
   --surface-ground: #f9f9f9;
   --primary-color: #00beb0;
   --text-color: #1b1b19;
