--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -5,7 +5,8 @@
   justify-content: space-between;
   // padding: 6rem 1rem 0rem 1rem;
   transition: margin-left $transitionDuration;
-  background: rgb(247, 253, 253);
+  // background: rgb(247, 253, 253);
+  background:white;
   overflow: auto;
 
   @media only screen and (max-width: 991px) {
