refactor - change typography in project

--- a/src/assets/styles/sass/_main.scss
+++ b/src/assets/styles/sass/_main.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: KanitLight;
+  font-family: RedHatDisplayLight;
   color: var(--text-color);
   background-color: var(--surface-ground);
   margin: 0;
@@ -20,7 +20,7 @@ body {
 }
 
 .p-component {
-  font-family: KanitLight;
+  font-family: RedHatDisplayLight;
 }
 
 a {
