--- a/src/assets/styles/sass/_topbar.scss
+++ b/src/assets/styles/sass/_topbar.scss
@@ -6,12 +6,13 @@
     top: 0;
     width: 100%;
     padding: 0 2rem;
-    background-color: var(--surface-card);
+    background-color:#000;
     transition: left $transitionDuration;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 3px 5px #E7E6E7, 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
+    color:#fff;
 
     .layout-topbar-logo {
         display: flex;
