--- a/src/assets/styles/sass/_menu.scss
+++ b/src/assets/styles/sass/_menu.scss
@@ -11,7 +11,7 @@
 	background-color: var(--surface-overlay);
     border: 1px solid #E7E6E7;
     padding: 1.5rem;
-    // box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08)
+    box-shadow: 9px -9px 20px 8px rgb(0 0 0 / 11%)
 }
 
 .layout-menu {
@@ -44,7 +44,7 @@
             color:var(--text-color);
             transition: color $transitionDuration;
             border-radius: $borderRadius;
-            padding: .75rem 1rem;
+            padding: .75rem 0rem;
             transition: background-color .15s;
 
             span {
