--- a/src/style.css
+++ b/src/style.css
@@ -324,9 +324,9 @@ small {
 }
 
 .symbol {
-    background: #8ce2db;
+    background: #e4cea1;
     padding: 2px 20px;
-    color: #0f655d;
+    color: #000;
     font-size: 1.4rem;
     border-radius: 0;
 }
