refactor - pass global variable to local so that the state does not get stuck

--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -6,7 +6,7 @@
   // padding: 6rem 1rem 0rem 1rem;
   transition: margin-left $transitionDuration;
   // background: rgb(247, 253, 253);
-  background:white;
+  background: white;
   overflow: auto;
 
   @media only screen and (max-width: 991px) {
@@ -24,6 +24,7 @@
   flex: 1 1 auto;
 }
 
+/*
 .section-main {
   padding: 6rem 1rem 0rem 1rem;
-}
+}*/
