--- a/src/assets/styles/sass/_content.scss
+++ b/src/assets/styles/sass/_content.scss
@@ -12,7 +12,7 @@
   @media only screen and (max-width: 991px) {
     //max-height: 90vh;
     //min-height: 90vh;
-    padding-bottom: 10vh;
+    padding-bottom: 20vh;
   }
 
   @media only screen and (min-width: 992px) {
@@ -28,7 +28,6 @@
   }
 }
 
-/*
 .section-main {
-  padding: 6rem 1rem 0rem 1rem;
-}*/
+  padding: 0rem 1rem 0rem 1rem;
+}
