--- a/src/assets/styles/_overrides.scss
+++ b/src/assets/styles/_overrides.scss
@@ -1,1 +1,31 @@
 // Suggested location to add your overrides so that migration would be easy by just updating the SASS folder in the future
+
+.layout-main-container {
+  font-size: 9.5pt;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // padding: 6rem 1rem 0rem 1rem;
+  transition: margin-left $transitionDuration;
+  // background: rgb(247, 253, 253);
+  background: white;
+  overflow: auto;
+
+  @media only screen and (max-width: 991px) {
+    //max-height: 90vh;
+    //min-height: 90vh;
+    padding-bottom: 20vh;
+  }
+
+  @media only screen and (min-width: 992px) {
+    min-height: 100vh;
+  }
+}
+
+.layout-main {
+  flex: 1 1 auto;
+}
+
+.section-main {
+  padding: 0rem 1rem 0rem 1rem;
+}
